# obs-ssp

./: .gitignore  .gitmodules  CMakeLists.txt  README-zh.md  README.md  azure-pipelines.yml  buildspec.json
.github/scripts/: .build.zsh  check-cmake.sh  check-format.sh
.github/workflows/: build-project.yaml  check-format.yaml  main.yml
CI/: build-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  package-macos.sh  package-windows.cmd
cmake/bundle/macos/: installer-macos.pkgproj.in
cmake/bundle/windows/: installer-Windows.iss.in
cmake/macos/: xcode.cmake
data/locale/: de-DE.ini  en-US.ini  ru-RU.ini  zh-CN.ini
installer/: installer.iss  installer.iss.in  libssp.dylib  obs-ssp.pkgproj  obs-ssp.pkgproj.in
lib/ssp/include/imf/: ISspClient.h  constructormagic.h  sspclient.h  threadloop.h
src/: VFrameQueue.cpp  VFrameQueue.h  ffmpeg-decode.c  ffmpeg-decode.h  obs-ssp-source.cpp  obs-ssp.cpp  obs-ssp.h  plugin-macros.h.in  plugin-support.h  ssp-client-iso.cpp  ssp-client-iso.h  ssp-client.cpp  ssp-client.h  ssp-controller.cpp  ssp-controller.h  ssp-mdns.cpp  ssp-mdns.h
src/controller/: cameraconfig.cpp  cameraconfig.h  cameracontroller.cpp  cameracontroller.h
ssp_connector/: CMakeLists.txt  LICENSE  main.cpp  main.h  ssp_connector_proto.h
ssp_connector/libuv/include/: pthread-barrier.h  uv-darwin.h
thirdpty/: CMakeLists.txt
